k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vault-services
  labels:
    name: vault-services
