k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecm-example-plugin
  namespace: default
  labels:
    app: ecm-example-plugin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecm-example-plugin
  template:
    metadata:
      labels:
        app: ecm-example-plugin
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: ecm-plugin
          image: pdasilva1/ecm-k8s-plugin:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      restartPolicy: Always
